// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DimensionItem matches the snapshot 1`] = `
<div>
  <li
    class="item"
    name="Period"
  >
    <div
      class="label"
      data-test="undefined-button-pe"
      tabindex="0"
    >
      <div
        class="iconWrapper"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2zm.5 1.5v4.293l2.854 2.853-.708.708L7.5 8.207V3.5z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="labelWrapper"
      >
        <span
          class="labelText"
        >
          <span
            data-dimensionid="pe"
          >
            Period
          </span>
        </span>
      </div>
    </div>
  </li>
  <style />
</div>
`;

exports[`DimensionItem matches the snapshot with locked 1`] = `
<div>
  <li
    class="item"
    name="Period"
  >
    <div
      class="label"
      data-test="undefined-button-pe"
      tabindex="0"
    >
      <div
        class="iconWrapper"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2zm.5 1.5v4.293l2.854 2.853-.708.708L7.5 8.207V3.5z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="labelWrapper"
      >
        <span
          class="labelText"
        >
          <span
            data-dimensionid="pe"
          >
            Period
          </span>
        </span>
      </div>
    </div>
    <div
      class="lockWrapper"
    >
      <svg
        fill="none"
        height="9"
        width="7"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3.5 1A1.5 1.5 0 0 0 2 2.5V3h3v-.5A1.5 1.5 0 0 0 3.5 1ZM1 2.5V3H0v6h7V3H6v-.5a2.5 2.5 0 0 0-5 0ZM1 8V4h5v4H1Zm3-1V5H3v2h1Z"
          fill="none"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <style />
  </li>
  <style />
</div>
`;

exports[`DimensionItem matches the snapshot with onOptionsClick 1`] = `
<div>
  <li
    class="item"
    name="Period"
  >
    <div
      class="label"
      data-test="undefined-button-pe"
      tabindex="0"
    >
      <div
        class="iconWrapper"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2zm.5 1.5v4.293l2.854 2.853-.708.708L7.5 8.207V3.5z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="labelWrapper"
      >
        <span
          class="labelText"
        >
          <span
            data-dimensionid="pe"
          >
            Period
          </span>
        </span>
      </div>
    </div>
    <div
      class="optionsWrapper"
      data-test="undefined-menu-pe"
    />
  </li>
  <style />
</div>
`;

exports[`DimensionItem matches the snapshot with recommended 1`] = `
<div>
  <li
    class="item"
    name="Period"
  >
    <div
      class="label"
      data-test="undefined-button-pe"
      tabindex="0"
    >
      <div
        class="iconWrapper"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2zm.5 1.5v4.293l2.854 2.853-.708.708L7.5 8.207V3.5z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="labelWrapper"
      >
        <span
          class="labelText"
        >
          <span
            data-dimensionid="pe"
          >
            Period
          </span>
        </span>
        <span
          aria-describedby=""
          class="jsx-237564060"
          data-test="dhis2-uicore-tooltip-reference"
          tabindex="0"
        >
          <div
            data-test="undefined-recommended-icon"
            style="background-color: rgb(0, 150, 136); height: 6px; width: 6px; border-radius: 4px; margin-left: 6px; display: inline-block; cursor: pointer;"
          />
        </span>
      </div>
    </div>
  </li>
  <style />
</div>
`;

exports[`DimensionItem matches the snapshot with selected 1`] = `
<div>
  <li
    class="item selected"
    name="Period"
  >
    <div
      class="label"
      data-test="undefined-button-pe"
      tabindex="0"
    >
      <div
        class="iconWrapper"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1a6 6 0 100 12A6 6 0 008 2zm.5 1.5v4.293l2.854 2.853-.708.708L7.5 8.207V3.5z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="labelWrapper"
      >
        <span
          class="labelText"
        >
          <span
            data-dimensionid="pe"
          >
            Period
          </span>
        </span>
      </div>
    </div>
  </li>
  <style />
</div>
`;
